Added CAR AI details page, not completed yet.

--- a/css/heroic-features.css
+++ b/css/heroic-features.css
@@ -6,3 +6,23 @@
 body {
   padding-top: 56px;
 }
+
+@media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+}
+
+.row {
+  display: flex;
+  padding: auto;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
+
+img {
+  width: 100%;
+}
