--- a/css/heroic-features.css
+++ b/css/heroic-features.css
@@ -1,8 +1,3 @@
-/*!
- * Start Bootstrap - Heroic Features (https://startbootstrap.com/template-overviews/heroic-features)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-heroic-features/blob/master/LICENSE)
- */
 body {
   padding-top: 56px;
 }
@@ -18,13 +13,23 @@ body {
   padding: auto;
 }
 
-.column {
+.img-column {
   flex: 33.33%;
   padding: 5px;
 }
 
-img {
+.link-column {
+  padding: 5px;
+}
+
+.img-hundo {
   width: 100%;
+}
+
+.img-center {
+  display: block;
+  margin: 0 auto;
+  padding: 15px;
 }
 
 a.anchor {
