Created hye sync logo, set up a few more things

--- a/css/heroic-features.css
+++ b/css/heroic-features.css
@@ -38,3 +38,27 @@ a.anchor {
   top: -60px;
   visibility: hidden;
 }
+
+@media(max-width: 1333px) {
+  .img-column {
+    flex-basis: 33%;
+  }
+}
+
+@media(max-width: 1073px) {
+   .img-column {
+    flex-basis: 33%;
+  }
+}
+
+@media(max-width: 815px) {
+  .img-column {
+    flex-basis: 50%;
+  }
+}
+
+@media(max-width: 555px) {
+  .img-column {
+    flex-basis: 100%;
+  }
+}
